@@ -1,4 +1,4 @@
 @echo off
 title Hub
-java -Xms2G -Xmx2G -XX:+UseConcMarkSweepGC -Dfile.encoding=UTF-8 -jar Spigot.jar
+java -Xms1G -Xmx1G -jar Spigot.jar
 pause
